--- a/consulta.copia.html
+++ b/consulta.copia.html
@@ -86,19 +86,22 @@
         Graphic,
         promiseUtils
       ) {
-        // Load webscene and display it in a SceneView
+        // Estableciendo la escena para luego cargarla en el la vista escena
         const webscene = new WebScene({
           portalItem: {
             id: "1b18b52847064f08a9db0389f22dae6f"
           }
         });
-        // create the SceneView
+
+        // Creando la vista de la escena con el web escena
         const view = new SceneView({
           container: "viewDiv",
           map: webscene
         });
+
         window.view = view;
-        // add a GraphicsLayer for the sketches and the buffer
+
+        // agregar un GraphicsLayer para los bocetos y el búfer
         const sketchLayer = new GraphicsLayer();
         const bufferLayer = new GraphicsLayer();
         view.map.addMany([bufferLayer, sketchLayer]);
@@ -107,15 +110,15 @@
         let sceneLayerView = null;
         let bufferSize = 0;
 
-        console.log(webscene.layer);
-        console.log(webscene.layers);
-
-        // Assign scene layer once webscene is loaded and initialize UI
+        // Asigne la capa de escena una vez que se carga webscene e inicialice la interfaz de usuario
         webscene.load().then(function() {
-          sceneLayer = webscene.layers.find(function(layer) {
-            return layer.title === null;
+          debugger;
+          sceneLayer = webscene.layers.find(function(layer) {            
+            //console.log(layer);
+            return layer.title === "enriquecida";
           });
-          sceneLayer.outFields = ["buildingMaterial", "yearCompleted"];
+
+          sceneLayer.outFields = ["RECLASI"];
 
           view.whenLayerView(sceneLayer).then(function(layerView) {
             sceneLayerView = layerView;
@@ -132,7 +135,7 @@
         view.ui.add([queryDiv], "bottom-left");
         view.ui.add([resultDiv], "top-right");
 
-        // use SketchViewModel to draw polygons that are used as a query
+        // use SketchViewModel para dibujar polígonos que se usan como consulta
         let sketchGeometry = null;
         const sketchViewModel = new SketchViewModel({
           layer: sketchLayer,
@@ -156,16 +159,21 @@
             runQuery();
           }
         });
-        // draw geometry buttons - use the selected geometry to sktech
+
+        // dibujar botones de geometría: use la geometría seleccionada para sktech
         document
           .getElementById("point-geometry-button")
           .addEventListener("click", geometryButtonsClickHandler);
+
         document
           .getElementById("line-geometry-button")
           .addEventListener("click", geometryButtonsClickHandler);
+
         document
           .getElementById("polygon-geometry-button")
           .addEventListener("click", geometryButtonsClickHandler);
+
+
         function geometryButtonsClickHandler(event) {
           const geometryType = event.target.value;
           clearGeometry();
@@ -184,18 +192,18 @@
           },
           values: [0]
         });
-        // get user entered values for buffer
+        // obtener valores ingresados ​​por el usuario para el búfer
         bufferNumSlider.on("value-change", bufferVariablesChanged);
         function bufferVariablesChanged(event) {
           bufferSize = event.value;
           runQuery();
         }
-        // Clear the geometry and set the default renderer
+        // Borre la geometría y configure el renderizador predeterminado
         document
           .getElementById("clearGeometry")
           .addEventListener("click", clearGeometry);
 
-        // Clear the geometry and set the default renderer
+        // Borre la geometría y configure el renderizador predeterminado
         function clearGeometry() {
           sketchGeometry = null;
           sketchViewModel.cancel();
@@ -206,7 +214,7 @@
           resultDiv.style.display = "none";
         }
 
-        // set the geometry query on the visible SceneLayerView
+        // establecer la consulta de geometría en el SceneLayerView visible
         var debouncedRunQuery = promiseUtils.debounce(function() {
           if (!sketchGeometry) {
             return;
@@ -230,7 +238,7 @@
           });
         }
 
-        // Set the renderer with objectIds
+        // Establecer el renderizador con objectIds
         var highlightHandle = null;
         function clearHighlighting() {
           if (highlightHandle) {
@@ -248,9 +256,9 @@
           highlightHandle = sceneLayerView.highlight(objectIds);
         }
 
-        // update the graphic with buffer
+        // actualizar el gráfico con buffer
         function updateBufferGraphic(buffer) {
-          // add a polygon graphic for the buffer
+          // agregar un gráfico de polígono para el búfer
           if (buffer > 0) {
             var bufferGeometry = geometryEngine.geodesicBuffer(
               sketchGeometry,
@@ -278,20 +286,24 @@
           query.distance = bufferSize;
           return sceneLayerView.queryObjectIds(query).then(highlightBuildings);
         }
-
-        var yearChart = null;
+       
         var materialChart = null;
 
         function queryStatistics() {
           const statDefinitions = [
             {
               onStatisticField:
-                "CASE WHEN enriquecida = 'Area sin cobertura forestal' THEN 1 ELSE 0 END",
-              outStatisticFieldName: "RECLASI",
+                "CASE WHEN RECLASI = 'Area sin cobertura forestal' THEN 1 ELSE 0 END",
+              outStatisticFieldName: "Area_SinCobertura",
+              statisticType: "sum"
+            },
+            {
+              onStatisticField:
+                "CASE WHEN RECLASI = 'Bosque latifoliado' THEN 1 ELSE 0 END",
+              outStatisticFieldName: "bosque_latifoliado",
               statisticType: "sum"
             }
           ];
-          debugger;
           const query = sceneLayerView.createQuery();
           query.geometry = sketchGeometry;
           query.distance = bufferSize;
@@ -300,96 +312,33 @@
           return sceneLayerView.queryFeatures(query).then(function(result) {
             const allStats = result.features[0].attributes;
             updateChart(materialChart, [
-              allStats.material_concrete,
-              allStats.material_brick,
-              allStats.material_wood,
-              allStats.material_steel,
-              allStats.material_other
-            ]);
-            updateChart(yearChart, [
-              allStats.year_1850,
-              allStats.year_1900,
-              allStats.year_1925,
-              allStats.year_1950,
-              allStats.year_1975,
-              allStats.year_2000
+              allStats.Area_SinCobertura,
+              allStats.bosque_latifoliado
             ]);
           }, console.error);
         }
 
-        // Updates the given chart with new data
+        // Actualiza la tabla dada con nuevos datos
         function updateChart(chart, dataValues) {
           chart.data.datasets[0].data = dataValues;
           chart.update();
         }
 
-        function createYearChart() {
-          const yearCanvas = document.getElementById("year-chart");
-          yearChart = new Chart(yearCanvas.getContext("2d"), {
-            type: "horizontalBar",
-            data: {
-              labels: [
-                "1850-1899",
-                "1900-1924",
-                "1925-1949",
-                "1950-1974",
-                "1975-1999",
-                "2000-2015"
-              ],
-              datasets: [
-                {
-                  label: "Build year",
-                  backgroundColor: "#149dcf",
-                  stack: "Stack 0",
-                  data: [0, 0, 0, 0, 0, 0]
-                }
-              ]
-            },
-            options: {
-              responsive: false,
-              legend: {
-                display: false
-              },
-              title: {
-                display: true,
-                text: "Build year"
-              },
-              scales: {
-                xAxes: [
-                  {
-                    stacked: true,
-                    ticks: {
-                      beginAtZero: true,
-                      precision: 0
-                    }
-                  }
-                ],
-                yAxes: [
-                  {
-                    stacked: true
-                  }
-                ]
-              }
-            }
-          });
-        }
+
         function createMaterialChart() {
           const materialCanvas = document.getElementById("material-chart");
           materialChart = new Chart(materialCanvas.getContext("2d"), {
             type: "doughnut",
             data: {
-              labels: ["Concrete", "Brick", "Wood", "Steel", "Other"],
+              labels: ["Area Sin Cobertura", "Bosque latifoliado"],
               datasets: [
                 {
                   backgroundColor: [
                     "#FD7F6F",
-                    "#7EB0D5",
-                    "#B2E061",
-                    "#BD7EBE",
-                    "#FFB55A"
+                    "#7EB0D5"
                   ],
                   borderWidth: 0,
-                  data: [0, 0, 0, 0, 0]
+                  data: [0, 0]
                 }
               ]
             },
@@ -408,12 +357,10 @@
         }
 
         function clearCharts() {
-          updateChart(materialChart, [0, 0, 0, 0, 0]);
-          updateChart(yearChart, [0, 0, 0, 0, 0, 0]);
+          updateChart(materialChart, [0, 0]);         
           document.getElementById("count").innerHTML = 0;
         }
 
-        createYearChart();
         createMaterialChart();
       });
     </script>
@@ -446,24 +393,21 @@
       </div>
       <br />
       <div class="tooltip">
-        <label for="bufferNum">Set a geometry buffer size:</label>
+        <label for="bufferNum">Establecer tamaño del buffer:</label>
         <div id="bufferNum"></div>
       </div>
       <br />
       <button class="esri-button" id="clearGeometry" type="button">
-        Clear
+        Borrar
       </button>
     </div>
 
     <div id="resultDiv" class="esri-widget">
       <div class="count">
-        Selected Buildings:
+        Resultados de la seleccion:
         <div class="count" id="count">0</div>
       </div>
       <div class="charts">
-        <div>
-          <canvas id="year-chart" height="250" width="260" />
-        </div>
         <div>
           <canvas id="material-chart" width="250" height="300" />
         </div>
